--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <img id="instagram" src="assets/img/contact/instagram.png" />
         <img id="twitter" src="assets/img/contact/twitter.png" />
         <img id="github" src="assets/img/contact/github.png" />
-        <img id="blog" src="assets/img/contact/edit.png" />
+        <img id="facebook" src="assets/img/contact/facebook.png" />
       </a-assets>
 
       <!-- set marker -->
@@ -99,25 +99,25 @@
           rotation="0 0 0"
           animation="property: rotation; to: 0 360 0; loop: true; dur: 25000; easing: linear"
         >
-          <!-- blog -->
+          <!-- facebook -->
           <a-entity
             position="0 0.6 -1"
-            link="href: https://example.com/"
+            link="href: https://www.facebook.com/"
           >
             <a-image
-              src="#blog"
+              src="#facebook"
               width="0.25"
               height="0.25"
               rotation="-60 0 0"
               animation="property: rotation; to: -60 -360 0; loop: true; dur: 25000; easing: linear"
             ></a-image>
             <a-sphere
-              color="green"
+              color="blue"
               radius="0.3"
               opacity="0.2"
             ></a-sphere>
             <a-triangle
-              color="green"
+              color="blue"
               vertex-a="0 0 1"
               vertex-b="11.76 0 -15.18"
               vertex-c="-11.76 0 -15.18"
